Actualizacion Marca personal

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     ></script>
     <title>Document</title>
     <link rel="stylesheet" href="./Estilos/Main.css">
-    <link rel="stylesheet" href="./Estilos/media_queries.css">
+    <!-- <link rel="stylesheet" href="./Estilos/media_queries.css"> -->
   </head>
   <body>
     <header>
@@ -24,17 +24,12 @@
           <img src="./Imagenes/Logo SVG 2.png" alt="Imagen de Bosque" />
         </div>
         <div id="text-MP">
-          <h2>Hi 👋, soy</h2>
-          <h1>Andres Ruiz | <span>Diseñador UX</span></h1>
+          <h2>Consultora de Higiene y Seguridad</h2>
           <p>
-            Creador de aplicaciones pensadas para todos, uniendo la creatividad,
-            la funcionalidad y la armonía para desarrollar un espacio en donde
-            los objetivos se cumplan.
+            Somos <strong><font color="#ea8010">LVS Prevención</font></strong>, su aliado en seguridad e higiene. Nuestro objetivo es simplificar la prevención, asegurando el bienestar de su equipo y el cumplimiento normativo. Descubran soluciones prácticas y eficientes para su empresa.
           </p>
-          <p>
-            <q><i>La naturaleza es nuestro modelo. </i></q>
-          </p>
-    </header>
+          
+      </header>
     <main></main>
     <div id="Quienes somos"></div>
     <div id="Servicios"></div>
