arreglo de primera pantalla

--- a/index.html
+++ b/index.html
@@ -26,13 +26,40 @@
         <div id="text-MP">
           <h2>Consultora de Higiene y Seguridad</h2>
           <p>
-            Somos <strong><font color="#ea8010">LVS Prevención</font></strong>, su aliado en seguridad e higiene. Nuestro objetivo es simplificar la prevención, asegurando el bienestar de su equipo y el cumplimiento normativo. Descubran soluciones prácticas y eficientes para su empresa.
+            Somos tu aliado en seguridad e higiene. Nuestro objetivo es simplificar la prevención, asegurando el bienestar de su equipo y el cumplimiento normativo. Descubran soluciones prácticas y eficientes para su empresa.
           </p>
           
       </header>
     <main></main>
-    <div id="Quienes somos"></div>
-    <div id="Servicios"></div>
-    <div id="Contactarnos"></div>
+    <div id="Quienes somos">
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo minus omnis illum pariatur tenetur. Earum ut facere sequi laborum blanditiis! Esse aliquam tempore eius illo repudiandae similique voluptates non. Quia.
+      </p>
+    </div>
+    <div id="Servicios">
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo minus omnis illum pariatur tenetur. Earum ut facere sequi laborum blanditiis! Esse aliquam tempore eius illo repudiandae similique voluptates non. Quia.
+      </p>
+    </div>
+    <div id="Contactarnos">
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo minus omnis illum pariatur tenetur. Earum ut facere sequi laborum blanditiis! Esse aliquam tempore eius illo repudiandae similique voluptates non. Quia.
+      </p>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo minus omnis illum pariatur tenetur. Earum ut facere sequi laborum blanditiis! Esse aliquam tempore eius illo repudiandae similique voluptates non. Quia.
+      </p>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo minus omnis illum pariatur tenetur. Earum ut facere sequi laborum blanditiis! Esse aliquam tempore eius illo repudiandae similique voluptates non. Quia.
+      </p>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo minus omnis illum pariatur tenetur. Earum ut facere sequi laborum blanditiis! Esse aliquam tempore eius illo repudiandae similique voluptates non. Quia.
+      </p>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo minus omnis illum pariatur tenetur. Earum ut facere sequi laborum blanditiis! Esse aliquam tempore eius illo repudiandae similique voluptates non. Quia.
+      </p>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo minus omnis illum pariatur tenetur. Earum ut facere sequi laborum blanditiis! Esse aliquam tempore eius illo repudiandae similique voluptates non. Quia.
+      </p>
+    </div>
   </body>
 </html>
