--- a/index.html
+++ b/index.html
@@ -32,34 +32,33 @@
       </header>
     <main></main>
     <div id="Quienes somos">
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo minus omnis illum pariatur tenetur. Earum ut facere sequi laborum blanditiis! Esse aliquam tempore eius illo repudiandae similique voluptates non. Quia.
-      </p>
+      <h3>Quienes somos</h3>
     </div>
-    <div id="Servicios">
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo minus omnis illum pariatur tenetur. Earum ut facere sequi laborum blanditiis! Esse aliquam tempore eius illo repudiandae similique voluptates non. Quia.
-      </p>
+    <div id="servicios">
+      <h2>Servicios</h2>
+      <div class="carrusel">
+        <ul id="contenido">
+          <li class="tarjeta" id="evacuación">
+            <h3>Plan y Plano de Evacuación</h3>
+            <p>Diseñamos e implementamos planes de evacuación detallados y claros, acompañados de planos gráficos, para garantizar una respuesta rápida y segura ante emergencias.</p>
+          </li>
+          <li class="tarjeta" id="capacitacion">
+            <h3>Capacitaciones en Prevención y Ergonomía</h3>
+            <p>Ofrecemos programas de capacitación personalizados sobre prevención de riesgos laborales y ergonomía, fundamentales para fomentar una cultura de seguridad y bienestar de los trabajadores.</p>
+          </li>
+          <li class="tarjeta" id="fuego" >
+            <h3>Cálculo de Carga de Fuego</h3>
+            <p>Realizamos estudios precisos de carga de fuego para evaluar el riesgo de incendio en sus instalaciones, proporcionando datos clave para la implementación de medidas de protección adecuadas y el cumplimiento normativo.</p>
+          </li>
+           <li class="tarjeta" id="ruido">
+            <h3>Protocolos de Ruido e Iluminación</h3>
+            <p>Elaboramos y aplicamos protocolos para la medición y control de los niveles de ruido e iluminación en el ambiente laboral, asegurando condiciones óptimas que preserven la salud y el confort de los trabajadores.</p>
+          </li>
+        </ul>
+     </div>
     </div>
     <div id="Contactarnos">
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo minus omnis illum pariatur tenetur. Earum ut facere sequi laborum blanditiis! Esse aliquam tempore eius illo repudiandae similique voluptates non. Quia.
-      </p>
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo minus omnis illum pariatur tenetur. Earum ut facere sequi laborum blanditiis! Esse aliquam tempore eius illo repudiandae similique voluptates non. Quia.
-      </p>
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo minus omnis illum pariatur tenetur. Earum ut facere sequi laborum blanditiis! Esse aliquam tempore eius illo repudiandae similique voluptates non. Quia.
-      </p>
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo minus omnis illum pariatur tenetur. Earum ut facere sequi laborum blanditiis! Esse aliquam tempore eius illo repudiandae similique voluptates non. Quia.
-      </p>
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo minus omnis illum pariatur tenetur. Earum ut facere sequi laborum blanditiis! Esse aliquam tempore eius illo repudiandae similique voluptates non. Quia.
-      </p>
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo minus omnis illum pariatur tenetur. Earum ut facere sequi laborum blanditiis! Esse aliquam tempore eius illo repudiandae similique voluptates non. Quia.
-      </p>
+      <h3>Contactarnos</h3>
     </div>
   </body>
 </html>
