creacion del carrusel

--- a/index.html
+++ b/index.html
@@ -36,22 +36,26 @@
     </div>
     <div id="servicios">
       <h2>Servicios</h2>
-      <div class="carrusel">
+      <div id="carrusel">
+        <div class="carrusel-nav">
+            <div class="flecha" onclick="moverCarrusel(-1)">‹</div>
+            <div class="flecha" onclick="moverCarrusel(1)">›</div>
+        </div>
         <ul id="contenido">
-          <li class="tarjeta" id="evacuación">
+          <li class="tarjeta" id="evacuacion">
             <h3>Plan y Plano de Evacuación</h3>
             <p>Diseñamos e implementamos planes de evacuación detallados y claros, acompañados de planos gráficos, para garantizar una respuesta rápida y segura ante emergencias.</p>
           </li>
           <li class="tarjeta" id="capacitacion">
-            <h3>Capacitaciones en Prevención y Ergonomía</h3>
+            <h3>Capacitaciones</h3>
             <p>Ofrecemos programas de capacitación personalizados sobre prevención de riesgos laborales y ergonomía, fundamentales para fomentar una cultura de seguridad y bienestar de los trabajadores.</p>
           </li>
           <li class="tarjeta" id="fuego" >
-            <h3>Cálculo de Carga de Fuego</h3>
+            <h3>Carga de Fuego</h3>
             <p>Realizamos estudios precisos de carga de fuego para evaluar el riesgo de incendio en sus instalaciones, proporcionando datos clave para la implementación de medidas de protección adecuadas y el cumplimiento normativo.</p>
           </li>
            <li class="tarjeta" id="ruido">
-            <h3>Protocolos de Ruido e Iluminación</h3>
+            <h3>Ruido e Iluminación</h3>
             <p>Elaboramos y aplicamos protocolos para la medición y control de los niveles de ruido e iluminación en el ambiente laboral, asegurando condiciones óptimas que preserven la salud y el confort de los trabajadores.</p>
           </li>
         </ul>
